fix(Toolbar styles): add overflow hidden to Toolbar styles

--- a/app/styles/components/Toolbar.scss
+++ b/app/styles/components/Toolbar.scss
@@ -6,6 +6,8 @@
   background-color: $color-ctrl-background;
   color: $color-ctrl-background-text;
 
+  overflow: hidden;
+
   @mixin button-toolbar {
     display: block;
     float: right;
